--- a/excito.html
+++ b/excito.html
@@ -215,7 +215,7 @@
                     <div class="navbar-block">
                         <div class="navbar-logo"><img src="images/excito.png" alt="Excito Logo"
                                 class="navbar-logo-image"></div>
-                        <div class="navbar-menu-block"><a href="index.htm" aria-current="page"
+                        <div class="navbar-menu-block"><a href="#" aria-current="page"
                                 class="navbar-link first w-inline-block w--current">
                                 <div>[</div>
                                 <div>HOME</div>
