--- a/excito.html
+++ b/excito.html
@@ -414,7 +414,7 @@
                         src="https://images.unsplash.com/photo-1465495914041-94578e873d6e?auto=format&fit=crop&q=80&w=800"
                         loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 916px"
                         alt="Wedding Process" class="process-walking-image">
-                    <div class="process-walking-text"><em>Amoura</em></div><img
+                    <div class="process-walking-text"><em>Excito</em></div><img
                         src="https://images.unsplash.com/photo-1522673607200-1648832cee98?auto=format&fit=crop&q=80&w=800"
                         loading="lazy" sizes="(max-width: 572px) 100vw, 572px" alt="Event Planning"
                         class="process-walking-image">
@@ -427,7 +427,7 @@
                         loading="lazy" sizes="(max-width: 572px) 100vw, 572px"
                         srcset="68e463ae03dc2c0fe4ba25ec/68e5c5dc91bc37a27ca74268_u5369419882_candid_editorial-p-500.png 500w, 68e463ae03dc2c0fe4ba25ec/68e5c5dc91bc37a27ca74268_u5369419882_candid_editorial.png 572w"
                         alt="" class="process-walking-image">
-                    <div class="process-walking-text"><em>Amoura</em></div><img
+                    <div class="process-walking-text"><em>Excito</em></div><img
                         src="68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man.png"
                         loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 916px"
                         srcset="68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man-p-500.png 500w, 68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man-p-800.png 800w, 68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man.png 916w"
@@ -442,7 +442,7 @@
                         loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 916px"
                         srcset="68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man-p-500.png 500w, 68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man-p-800.png 800w, 68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man.png 916w"
                         alt="" class="process-walking-image">
-                    <div class="process-walking-text"><em>Amoura</em></div><img
+                    <div class="process-walking-text"><em>Excito</em></div><img
                         src="68e463ae03dc2c0fe4ba25ec/68e5c5dc91bc37a27ca74268_u5369419882_candid_editorial.png"
                         loading="lazy" sizes="(max-width: 572px) 100vw, 572px"
                         srcset="68e463ae03dc2c0fe4ba25ec/68e5c5dc91bc37a27ca74268_u5369419882_candid_editorial-p-500.png 500w, 68e463ae03dc2c0fe4ba25ec/68e5c5dc91bc37a27ca74268_u5369419882_candid_editorial.png 572w"
