--- a/thenkasi-events.html
+++ b/thenkasi-events.html
@@ -5,14 +5,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Jeba Events - The Art of Complete Coordination</title>
-    <meta content="Jeba Events - The Art of Complete Coordination" name="description">
-    <meta content="Jeba Events - The Art of Complete Coordination" property="og:title">
-    <meta content="Jeba Events - The Art of Complete Coordination" property="og:description">
+    <title>Thenkasi Events - The Art of Complete Coordination</title>
+    <meta content="Thenkasi Events - The Art of Complete Coordination" name="description">
+    <meta content="Thenkasi Events - The Art of Complete Coordination" property="og:title">
+    <meta content="Thenkasi Events - The Art of Complete Coordination" property="og:description">
     <meta content="https://cdn.prod.website-files.com/68e463ae03dc2c0fe4ba25ec/68ef27a1f7932467a4b3d341_Snippet.png"
         property="og:image">
-    <meta content="Jeba Events - The Art of Complete Coordination" property="twitter:title">
-    <meta content="Jeba Events - The Art of Complete Coordination" property="twitter:description">
+    <meta content="Thenkasi Events - The Art of Complete Coordination" property="twitter:title">
+    <meta content="Thenkasi Events - The Art of Complete Coordination" property="twitter:description">
     <meta property="og:type" content="website">
     <meta content="summary_large_image" name="twitter:card">
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -163,7 +163,7 @@
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "Jeba Events",
+  "name": "Thenkasi Events",
   "url": "/",
   "description": "Full-service event planning and coordination serving TRIVANDRUM and destinations worldwide. The art of complete coordination.",
   "areaServed": [
@@ -217,7 +217,7 @@
                 <div class="w-layout-blockcontainer navbar-container w-container">
                     <div class="navbar-block">
                         <div class="navbar-logo">
-                            <div class="navbar-logo-text">Jeba Events</div>
+                            <div class="navbar-logo-text">Thenkasi Events</div>
                         </div>
                         <div class="navbar-menu-block"><a href="#" aria-current="page"
                                 class="navbar-link first w-inline-block w--current">
@@ -257,7 +257,7 @@
                             src="https://images.unsplash.com/photo-1511795409834-ef04bbd61622?auto=format&fit=crop&q=80&w=2000"
                             loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 916px"
                             alt="Romantic Engagement" class="hero-image _2nd">
-                        <div class="hero-text-1">Jeba Events</div>
+                        <div class="hero-text-1">Thenkasi Events</div>
                         <h1 class="hero-heading">Th<em>e</em> A<em>r</em>t o<em>f</em> Comp<em>l</em>ete
                             C<em>o</em>ordinati<em>o</em>n</h1>
                         <div class="hero-text-2">We bring your vision to life with precision and passion. From intimate
@@ -296,7 +296,7 @@
                 <div class="w-layout-blockcontainer about-container w-container">
                     <div class="about-block">
                         <div class="about-heading-block">
-                            <h2 class="about-heading">At Jeba Events, your wedding should be nothing short of
+                            <h2 class="about-heading">At Thenkasi Events, your wedding should be nothing short of
                                 magical — and
                                 it all starts here. Let’s talk about your vision, and we’ll make it real.</h2>
                             <div class="about-line-block _1"></div>
@@ -417,7 +417,7 @@
                         src="https://images.unsplash.com/photo-1465495914041-94578e873d6e?auto=format&fit=crop&q=80&w=800"
                         loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 916px"
                         alt="Wedding Process" class="process-walking-image">
-                    <div class="process-walking-text"><em>Jeba Events</em></div><img
+                    <div class="process-walking-text"><em>Thenkasi Events</em></div><img
                         src="https://images.unsplash.com/photo-1522673607200-1648832cee98?auto=format&fit=crop&q=80&w=800"
                         loading="lazy" sizes="(max-width: 572px) 100vw, 572px" alt="Event Planning"
                         class="process-walking-image">
@@ -430,7 +430,7 @@
                         loading="lazy" sizes="(max-width: 572px) 100vw, 572px"
                         srcset="68e463ae03dc2c0fe4ba25ec/68e5c5dc91bc37a27ca74268_u5369419882_candid_editorial-p-500.png 500w, 68e463ae03dc2c0fe4ba25ec/68e5c5dc91bc37a27ca74268_u5369419882_candid_editorial.png 572w"
                         alt="" class="process-walking-image">
-                    <div class="process-walking-text"><em>Jeba Events</em></div><img
+                    <div class="process-walking-text"><em>Thenkasi Events</em></div><img
                         src="68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man.png"
                         loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 916px"
                         srcset="68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man-p-500.png 500w, 68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man-p-800.png 800w, 68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man.png 916w"
@@ -445,7 +445,7 @@
                         loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 916px"
                         srcset="68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man-p-500.png 500w, 68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man-p-800.png 800w, 68e463ae03dc2c0fe4ba25ec/68e5c1dc6a980cd2aac3af1d__flabbergast__Photorealistic_video_portrait_of_a_young_man.png 916w"
                         alt="" class="process-walking-image">
-                    <div class="process-walking-text"><em>Jeba Events</em></div><img
+                    <div class="process-walking-text"><em>Thenkasi Events</em></div><img
                         src="68e463ae03dc2c0fe4ba25ec/68e5c5dc91bc37a27ca74268_u5369419882_candid_editorial.png"
                         loading="lazy" sizes="(max-width: 572px) 100vw, 572px"
                         srcset="68e463ae03dc2c0fe4ba25ec/68e5c5dc91bc37a27ca74268_u5369419882_candid_editorial-p-500.png 500w, 68e463ae03dc2c0fe4ba25ec/68e5c5dc91bc37a27ca74268_u5369419882_candid_editorial.png 572w"
@@ -569,7 +569,7 @@
                 <div class="testimonial-block">
                     <div class="testimonial-text-1">Words That Warm Our Hearts</div>
                     <div class="testimonial-inner-block">
-                        <div class="testimonial-item-value">&quot;Jeba Events turned our dream wedding into a
+                        <div class="testimonial-item-value">&quot;Thenkasi Events turned our dream wedding into a
                             reality.
                             Their attention to detail and professional coordination made our special day absolutely
                             flawless. We
@@ -601,7 +601,7 @@
     <section class="choose-section">
         <div class="w-layout-blockcontainer choose-container w-container">
             <div class="choose-block">
-                <div class="choose-text-1">Why Jeba Events</div>
+                <div class="choose-text-1">Why Thenkasi Events</div>
                 <div class="choose-inner-block">
                     <div class="choose-item-block">
                         <div class="choose-item-text">+10 YEARS EXPERIENCE</div>
@@ -655,15 +655,15 @@
                                     </div>
                                 </div>
                                 <div class="blog-item-flex-2">
-                                    <div class="blog-item-title">Inside Jeba Events</div>
+                                    <div class="blog-item-title">Inside Thenkasi Events</div>
                                     <div class="blog-item-text w-richtext">
-                                        <p>At Jeba Events, we believe in the power of a perfectly executed
+                                        <p>At Thenkasi Events, we believe in the power of a perfectly executed
                                             celebration. Our latest
                                             features explore the journey from concept to completion, showcasing the
                                             meticulous planning and
                                             creative flair that goes into every event.</p>
                                     </div>
-                                </div><a aria-label="Read more about Jeba Events" href="#Gallery"
+                                </div><a aria-label="Read more about Thenkasi Events" href="#Gallery"
                                     class="secondary-button blog w-inline-block">
                                     <div class="secondary-button-icon blog w-embed"><svg
                                             xmlns="http://www.w3.org/2000/svg" viewbox="0 0 16 16" fill="none">
@@ -692,12 +692,10 @@
             <div
                 style="border-radius: 20px; overflow: hidden; background: #1a1a1a; box-shadow: 0 10px 30px rgba(0,0,0,0.5); border: 1px solid #333;">
                 <iframe
-                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3943.0305910721254!2d77.72392787458436!3d8.783191991268671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04120325ae3bab%3A0xe9c106a59555b973!2sJeba%20Events!5e0!3m2!1sen!2sin!4v1771566088653!5m2!1sen!2sin" 
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31354.757788645435!2d78.7029649!3d10.784887699999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baaf563aa5cdab3%3A0xecdbbcfcd86ceea3!2sRJ%20Events!5e0!3m2!1sen!2sin!4v1771483258531!5m2!1sen!2sin"
                     width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
-
-               
             </div>
             <div style="text-align: center; margin-top: 30px;">
                 <a href="https://www.google.com/maps/place/RJ+Events/@10.7848877,78.7029649,14z/data=!4m10!1m2!2m1!1sevent+management+company!3m6!1s0x3baaf563aa5cdab3:0xecdbbcfcd86ceea3!8m2!3d10.7848877!4d78.7029649!15sChhldmVudCBtYW5hZ2VtZW50IGNvbXBhbnlaGiIYZXZlbnQgbWFuYWdlbWVudCBjb21wYW55kgENZXZlbnRfcGxhbm5lcuABAA!16s%2Fg%2F11ns50djrm?entry=ttu&g_ep=EgoyMDI2MDIxNi4wIKXMDSoASAFQAw%3D%3D"
@@ -738,8 +736,8 @@
                             </div>
                             <div
                                 style="font-size: 2em; font-weight: 800; font-family: 'Instrument Serif', serif; font-style: italic; letter-spacing: 1px; line-height: 1.1;">
-                                <a href="tel:09488488129"
-                                    style="color:black; text-decoration: none; display: block; margin-bottom: 8px;">09488488129</a>
+                                <a href="tel:09489428143"
+                                    style="color:black; text-decoration: none; display: block; margin-bottom: 8px;">09489428143</a>
                                 
                             </div>
                         </div>
