--- a/classicweddingplanners.html
+++ b/classicweddingplanners.html
@@ -698,7 +698,7 @@
                 </iframe>
             </div>
             <div style="text-align: center; margin-top: 30px;">
-                <a href="https://www.google.com/maps/place/RJ+Events/@10.7848877,78.7029649,14z/data=!4m10!1m2!2m1!1sevent+management+company!3m6!1s0x3baaf563aa5cdab3:0xecdbbcfcd86ceea3!8m2!3d10.7848877!4d78.7029649!15sChhldmVudCBtYW5hZ2VtZW50IGNvbXBhbnlaGiIYZXZlbnQgbWFuYWdlbWVudCBjb21wYW55kgENZXZlbnRfcGxhbm5lcuABAA!16s%2Fg%2F11ns50djrm?entry=ttu&g_ep=EgoyMDI2MDIxNi4wIKXMDSoASAFQAw%3D%3D"
+                <a href="https://www.google.com/maps/place/Jeba+Events/@8.783192,77.7239279,17z/data=!4m15!1m8!3m7!1s0x3b04120325ae3bab:0xe9c106a59555b973!2sJeba+Events!8m2!3d8.783192!4d77.7265028!10e1!16s%2Fg%2F1q5bm9pps!3m5!1s0x3b04120325ae3bab:0xe9c106a59555b973!8m2!3d8.783192!4d77.7265028!16s%2Fg%2F1q5bm9pps?entry=ttu&g_ep=EgoyMDI2MDIxNy4wIKXMDSoASAFQAw%3D%3D"
                     target="_blank" class="primary-button hero w-inline-block">
                     <div class="primary-button-span hero">(</div>
                     <div>Open in Google Maps</div>
