--- a/classicweddingplanners.html
+++ b/classicweddingplanners.html
@@ -698,7 +698,7 @@
                 </iframe>
             </div>
             <div style="text-align: center; margin-top: 30px;">
-                <a href="https://www.google.com/maps/place/Jeba+Events/@8.783192,77.7239279,17z/data=!4m15!1m8!3m7!1s0x3b04120325ae3bab:0xe9c106a59555b973!2sJeba+Events!8m2!3d8.783192!4d77.7265028!10e1!16s%2Fg%2F1q5bm9pps!3m5!1s0x3b04120325ae3bab:0xe9c106a59555b973!8m2!3d8.783192!4d77.7265028!16s%2Fg%2F1q5bm9pps?entry=ttu&g_ep=EgoyMDI2MDIxNy4wIKXMDSoASAFQAw%3D%3D"
+                <a href="https://www.google.com/maps/place/Classic+Wedding+%26+Event+Planners/@8.7227703,77.7357723,17z/data=!4m15!1m8!3m7!1s0x3b041334980d1b9d:0xdd0c115cbffaa9c8!2sClassic+Wedding+%26+Event+Planners!8m2!3d8.7227703!4d77.7383472!10e1!16s%2Fg%2F11gr5z57rw!3m5!1s0x3b041334980d1b9d:0xdd0c115cbffaa9c8!8m2!3d8.7227703!4d77.7383472!16s%2Fg%2F11gr5z57rw?entry=ttu&g_ep=EgoyMDI2MDIxNy4wIKXMDSoASAFQAw%3D%3D"
                     target="_blank" class="primary-button hero w-inline-block">
                     <div class="primary-button-span hero">(</div>
                     <div>Open in Google Maps</div>
