--- a/thenkasi-events.html
+++ b/thenkasi-events.html
@@ -692,13 +692,14 @@
             <div
                 style="border-radius: 20px; overflow: hidden; background: #1a1a1a; box-shadow: 0 10px 30px rgba(0,0,0,0.5); border: 1px solid #333;">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d31354.757788645435!2d78.7029649!3d10.784887699999999!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3baaf563aa5cdab3%3A0xecdbbcfcd86ceea3!2sRJ%20Events!5e0!3m2!1sen!2sin!4v1771483258531!5m2!1sen!2sin"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1009949.2116749899!2d76.57158386892281!3d8.585026417544999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06839fe0a4cd29%3A0xbad594f7fe06a885!2sTENKASI%20EVENTS!5e0!3m2!1sen!2sin!4v1771566467092!5m2!1sen!2sin"
                     width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
+
             </div>
             <div style="text-align: center; margin-top: 30px;">
-                <a href="https://www.google.com/maps/place/RJ+Events/@10.7848877,78.7029649,14z/data=!4m10!1m2!2m1!1sevent+management+company!3m6!1s0x3baaf563aa5cdab3:0xecdbbcfcd86ceea3!8m2!3d10.7848877!4d78.7029649!15sChhldmVudCBtYW5hZ2VtZW50IGNvbXBhbnlaGiIYZXZlbnQgbWFuYWdlbWVudCBjb21wYW55kgENZXZlbnRfcGxhbm5lcuABAA!16s%2Fg%2F11ns50djrm?entry=ttu&g_ep=EgoyMDI2MDIxNi4wIKXMDSoASAFQAw%3D%3D"
+                <a href="https://www.google.com/maps/place/TENKASI+EVENTS/@8.5850264,76.5715839,9z/data=!4m10!1m2!2m1!1sEvent+management,+thenkasi!3m6!1s0x3b06839fe0a4cd29:0xbad594f7fe06a885!8m2!3d8.9907742!4d77.2951203!15sChlFdmVudCBtYW5hZ2VtZW50LCB0ZW5rYXNpWhoiGGV2ZW50IG1hbmFnZW1lbnQgdGVua2FzaZIBGGV2ZW50X21hbmFnZW1lbnRfY29tcGFueZoBRENpOURRVWxSUVVOdlpFTm9kSGxqUmpsdlQyeHZlV1ZxVmt4Tk1tc3lZbFpvYjFnd1pIaGFNR3hZWVRCV1VHUklZeEFC4AEA-gEECHwQPg!16s%2Fg%2F11kj29q66l?entry=ttu&g_ep=EgoyMDI2MDIxNy4wIKXMDSoASAFQAw%3D%3D"
                     target="_blank" class="primary-button hero w-inline-block">
                     <div class="primary-button-span hero">(</div>
                     <div>Open in Google Maps</div>
@@ -727,8 +728,7 @@
                         <div style="display: flex; align-items: start; gap: 20px; margin-bottom: 10px;">
                             <div style="flex-shrink: 0; padding-top: 8px;">
                                 <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#FFFFFF"
-                                    stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"
-                                    >
+                                    stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
                                     <path
                                         d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
                                     </path>
@@ -738,7 +738,7 @@
                                 style="font-size: 2em; font-weight: 800; font-family: 'Instrument Serif', serif; font-style: italic; letter-spacing: 1px; line-height: 1.1;">
                                 <a href="tel:09489428143"
                                     style="color:black; text-decoration: none; display: block; margin-bottom: 8px;">09489428143</a>
-                                
+
                             </div>
                         </div>
                     </div>
